# leetcode-judgment

./: .gitattributes  .gitignore  .tokeignore  AGENTS.md  Dockerfile  README.md  biome.json  commitlint.config.ts  justfile  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
app/: globals.css
app/[locale]/: layout.tsx  loading.tsx  page.tsx
components/: ASCIIText.tsx  CodeEditor.tsx  ElectricBorder.tsx  GlassSurface.tsx  GradientText.tsx  HomePageClient.tsx  LayoutShell.tsx  Navbar.tsx  NavbarActions.tsx  ProblemList.tsx  SearchInput.tsx  Squares.tsx  VariableProximity.tsx
components/ui/: chart.tsx  select.tsx  sidebar.tsx
judgment/: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  biome.json  build  dev.sh  docker-compose.yml  languages.json  package-lock.json  package.json  yargs.c
judgment/.cargo/: config.toml
judgment/docs/: contributing.md  docker.md
judgment/runners/: c  cpp  csharp  go  java  javascript  php  python  rust  typescript
judgment/setup/: JD  JD.service  bash  nginx.conf  setup  uninstall
judgment/src/: main.rs  network.rs  sandbox.rs  test-console.html
judgment/test/: test.test.ts
lib/: judgment.ts  nextauth.config.ts  problems.ts
messages/: en.json  zh.json
problems/0001.Two Sum/: Solution.c  Solution.cpp  Solution.cs  Solution.java  Solution.js  Solution.php  Solution.rs  Solution.ts  test_case.json
scripts/: balance.ts  check_main_language.ts  delete_reduncation.ts  filter_incomplete_problems.ts  find_problems_feature.ts
tests/: crawel.ts
utils/: index.ts
(+395 files in other folders)
